rendered proj detailes from js file

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
+      <div class="proj-container row">
+         <!-- <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -140,7 +140,8 @@
             <h4>Threads</h4>
             <p class="text-muted">Illustration</p>
           </div>
-        </div>
+        </div> -->
+        <!--
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
@@ -210,7 +211,7 @@
             <h4>Window</h4>
             <p class="text-muted">Photography</p>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -221,9 +222,9 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Larry Parker</h4>
-            <p class="text-muted">Lead Marketer</p>
+            <img class="mx-auto rounded-circle" src="img/team/me.jpeg" alt="">
+            <h4>Itay Raz</h4>
+            <p class="text-muted">Full stack web developer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -521,6 +522,7 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
+  <script src="js/proj-service.js"></script>
   <script src="js/ca-gallery.js"></script>
   <script src="js/offCanvas.js"></script>
   <script src="js/main.js"></script>
