--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <input type="email" class="form-control" id="exampleFormControlInput1" value="itay.r81@gmail.com" placeholder="Email adress">
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Subject">
+        <input type="text" class="form-control email-subject" id="exampleFormControlInput1" placeholder="Subject">
       </div>
       <div class="form-group">
-        <textarea class="form-control" placeholder="Email content" id="exampleFormControlTextarea1" rows="10"></textarea>
+        <textarea class="form-control email-text" placeholder="Email content" id="exampleFormControlTextarea1" rows="10"></textarea>
       </div>
-      <input type="submit" class="btn btn-primary" value="Submit">
+      <input type="button" class="btn btn-primary" value="Submit" onclick="onSubmitMail()">
     </form>
   </section>
     
